# fastapi-task-runner

./: Dockerfile  LICENSE  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt
